# ballistics-engine-rb

./: .gitignore  Cargo.toml  README.md  Rakefile  ballistics-engine.gemspec  test_bindings.rb
ext/ballistics_engine_rb/: Rakefile
lib/: ballistics_engine.rb
src/: lib.rs
